--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "react-pokemons-app",
     "version": "1.0.0",
     "description": "An awesome application to handle some pokemons.",
+    "homepage" : "https://github.com/cem-sucu/pokedex.git",
     "dependencies": {
         "@types/node": "12.11.1",
         "@types/react": "16.9.9",
